[WIP] fdo#50118 use English add-in function names

This patch is _NOT_ intended to be pushed, it is solely meant to be
reviewed by calc-experts, so that a revised patch set can be submitted
that is meant for pushing.
See my inline comments and review for further details.

Change-Id: I05eb16a8775ed9e30e719f28099f57933d822b77